Made search button font size the same as the text box, so the two-pixel shift seen in Firefox is no longer present.

--- a/public/selfmarks.css
+++ b/public/selfmarks.css
@@ -102,6 +102,7 @@ td#page-search {
 }
 #page-search-button {
     display: none;
+    font-size: 12px;
 }
 td#page-search.focused #page-search-box {
     color: #000000;
